Finish editing-users

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,6 +13,13 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= link_to user.name, user %></td>
+        <td>
+          <% if current_user.admin? && !current_user?(user) %>
+            <%= link_to "削除", user, method: :delete,
+                data: { confirm: "削除してもよろしいですか？" },
+                class: "btn btn-danger" %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </table>
